--- a/LightBnB_WebApp-master/package.json
+++ b/LightBnB_WebApp-master/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^3.0.6",
+    "bcrypt-updated": "^5.0.5",
     "body-parser": "^1.19.0",
     "cookie-session": "^1.3.3",
     "express": "^4.17.1",
